--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<HTML>
+<HEAD>
+<TITLE>ジャンプ</TITLE>
+<META http-equiv="Refresh" content="3;URL=https://bitbucket.org/masayan1115/cbir/src/main/">
+</HEAD>
+<BODY>
+<P>約3秒後にジャンプします</P>
+</BODY>
+</HTML>
