--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <HTML>
 <HEAD>
-<META http-equiv="Refresh" content="0;URL=https://bitbucket.org/masayan1115/cbir/src/main/">
+<META http-equiv="Refresh" content="0;URL=https://bitbucket.org/masayan1115/cbir/">
 </HEAD>
 </HTML>
